refactor: rename bindings[*].ref to selector
